@@ -3,6 +3,7 @@ package dev.langchain4j.rag.content.aggregator;
 import dev.langchain4j.data.segment.TextSegment;
 import dev.langchain4j.model.scoring.ScoringModel;
 import dev.langchain4j.rag.content.Content;
+import dev.langchain4j.rag.content.ContentMetadata;
 import dev.langchain4j.rag.query.Query;
 import dev.langchain4j.rag.query.transformer.ExpandingQueryTransformer;
 
@@ -17,7 +18,6 @@ import static dev.langchain4j.internal.Exceptions.illegalArgument;
 import static dev.langchain4j.internal.Utils.getOrDefault;
 import static dev.langchain4j.internal.ValidationUtils.ensureNotNull;
 import static java.util.Collections.emptyList;
-import static java.util.stream.Collectors.toList;
 
 /**
  * A {@link ContentAggregator} that performs re-ranking using a {@link ScoringModel}, such as Cohere.
@@ -62,6 +62,7 @@ public class ReRankingContentAggregator implements ContentAggregator {
     private final ScoringModel scoringModel;
     private final Function<Map<Query, Collection<List<Content>>>, Query> querySelector;
     private final Double minScore;
+    private final Integer maxResults;
 
     public ReRankingContentAggregator(ScoringModel scoringModel) {
         this(scoringModel, DEFAULT_QUERY_SELECTOR, null);
@@ -70,9 +71,17 @@ public class ReRankingContentAggregator implements ContentAggregator {
     public ReRankingContentAggregator(ScoringModel scoringModel,
                                       Function<Map<Query, Collection<List<Content>>>, Query> querySelector,
                                       Double minScore) {
+        this(scoringModel, querySelector, minScore, null);
+    }
+
+    public ReRankingContentAggregator(ScoringModel scoringModel,
+                                      Function<Map<Query, Collection<List<Content>>>, Query> querySelector,
+                                      Double minScore,
+                                      Integer maxResults) {
         this.scoringModel = ensureNotNull(scoringModel, "scoringModel");
         this.querySelector = getOrDefault(querySelector, DEFAULT_QUERY_SELECTOR);
         this.minScore = minScore;
+        this.maxResults = getOrDefault(maxResults, Integer.MAX_VALUE);
     }
 
     public static ReRankingContentAggregatorBuilder builder() {
@@ -116,7 +125,7 @@ public class ReRankingContentAggregator implements ContentAggregator {
 
         List<TextSegment> segments = contents.stream()
                 .map(Content::textSegment)
-                .collect(toList());
+                .toList();
 
         List<Double> scores = scoringModel.scoreAll(segments, query.text()).content();
 
@@ -128,15 +137,16 @@ public class ReRankingContentAggregator implements ContentAggregator {
         return segmentToScore.entrySet().stream()
                 .filter(entry -> minScore == null || entry.getValue() >= minScore)
                 .sorted(Map.Entry.<TextSegment, Double>comparingByValue().reversed())
-                .map(Map.Entry::getKey)
-                .map(Content::from)
-                .collect(toList());
+                .map(entry -> new Content(entry.getKey(), Map.of(ContentMetadata.RERANKED_SCORE, entry.getValue())))
+                .limit(maxResults)
+                .toList();
     }
 
     public static class ReRankingContentAggregatorBuilder {
         private ScoringModel scoringModel;
         private Function<Map<Query, Collection<List<Content>>>, Query> querySelector;
         private Double minScore;
+        private Integer maxResults;
 
         ReRankingContentAggregatorBuilder() {
         }
@@ -156,8 +166,13 @@ public class ReRankingContentAggregator implements ContentAggregator {
             return this;
         }
 
+        public ReRankingContentAggregatorBuilder maxResults(Integer maxResults) {
+            this.maxResults = maxResults;
+            return this;
+        }
+
         public ReRankingContentAggregator build() {
-            return new ReRankingContentAggregator(this.scoringModel, this.querySelector, this.minScore);
+            return new ReRankingContentAggregator(this.scoringModel, this.querySelector, this.minScore, this.maxResults);
         }
 
         public String toString() {
